layout bug fixed

--- a/app/sass/modules/_chat.scss
+++ b/app/sass/modules/_chat.scss
@@ -32,26 +32,30 @@
     opacity: 0.9;
     margin-bottom: 6px;
   }
-  .message-text {
-    background: $brand-dark;
-    color: $brand-secondary;
-    display: inline;
-    padding: 4px 8px;
-    border-radius: 8px;
-    height: $height-default;
-  }
-  .message-action {
-    margin: 0 10px;
-    cursor: pointer;
-    height: $height-default;
-    line-height: $height-default;
-    color: $text-color-negative;
-    &.active {
-      color: $text-color-base;
+  .message-wrapper {
+    padding: 0 15px;
+    .message-text {
+      background: $brand-dark;
+      color: $brand-secondary;
+      display: inline;
+      padding: 4px 8px;
+      border-radius: 8px;
+      height: $height-default;
     }
-    span {
-      padding: 5px;
+    .message-action {
+      margin: 0 10px;
+      cursor: pointer;
+      height: $height-default;
+      line-height: $height-default;
+      color: $text-color-negative;
+      &.active {
+        color: $text-color-base;
+      }
+      span {
+        padding: 5px;
+      }
     }
   }
+
 }
 
